feat(ros): implement topic I/O

--- a/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/CMakeLists.txt
+++ b/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/CMakeLists.txt
@@ -1,4 +1,7 @@
 target_sources(
   mono_imu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/mono_imu.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/config.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/config.hpp
 )
+add_subdirectory(callback)
