--- a/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/CMakeLists.txt
+++ b/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_sources(
-  mono_imu PRIVATE
+  mono_imu__containerized PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/mono_imu.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/config.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/config.hpp
