--- a/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/callback/CMakeLists.txt
+++ b/src/catkin/src/orbslam3_docker_ros/src/orbslam3_ros_docker/callback/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_sources(
-  mono_imu PRIVATE
+  mono_imu__containerized PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/image.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/image.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/imu.cpp
