feat(ros): add tracking result topic publication

--- a/src/catkin/src/orbslam3_docker_ros/CMakeLists.txt
+++ b/src/catkin/src/orbslam3_docker_ros/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(orbslam3_docker_ros)
 
 find_package (catkin REQUIRED COMPONENTS
-   roscpp
-   std_msgs
-   sensor_msgs
-   cv_bridge
-   image_transport
-   message_generation
+  roscpp
+  std_msgs
+  sensor_msgs
+  cv_bridge
+  image_transport
+  message_generation
+  tf2
+  tf2_ros
 )
 
 find_package(OpenCV REQUIRED)
@@ -15,8 +17,9 @@ find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
 
 catkin_package (
-   CATKIN_DEPENDS
-   roscpp std_msgs cv_bridge image_transport sensor_msgs message_runtime
+  CATKIN_DEPENDS
+  roscpp std_msgs cv_bridge image_transport
+  sensor_msgs message_runtime tf2 tf2_ros
 )
 
 add_executable(mono_imu__containerized "")
