--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -3,5 +3,6 @@ FROM orbslam3-docker-deps
 RUN apt-get update -y \
     && apt-get install -y --no-install-recommends \
         ros-melodic-cv-bridge ros-melodic-image-transport \
+        ros-melodic-tf2-ros \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
