--- a/src/catkin/src/orbslam3_docker_ros/package.xml
+++ b/src/catkin/src/orbslam3_docker_ros/package.xml
@@ -15,12 +15,16 @@
     <build_depend>cv_bridge</build_depend>
     <build_depend>image_transport</build_depend>
     <build_depend>message_generation</build_depend>
+    <build_depend>tf2</build_depend>
+    <build_depend>tf2_ros</build_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>std_msgs</run_depend>
     <run_depend>sensor_msgs</run_depend>
     <run_depend>cv_bridge</run_depend>
     <run_depend>image_transport</run_depend>
     <run_depend>message_runtime</run_depend>
+    <run_depend>tf2</run_depend>
+    <run_depend>tf2_ros</run_depend>
     <export>
     </export>
 </package>
