build: add marker for container build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,12 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_package()
 
-execute_process(COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/tools/build")
+add_custom_command(
+  OUTPUT ${CMAKE_BINARY_DIR}/orbslam3_docker.stamp
+  COMMAND
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools/build &&
+    touch ${CMAKE_BINARY_DIR}/orbslam3_docker.build
+)
+add_custom_target(
+  orbslam3_docker_container ALL
+  DEPENDS ${CMAKE_BINARY_DIR}/orbslam3_docker.stamp)
