--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,31 @@
-FROM orbslam3-docker-deps
+FROM ros:melodic-ros-core-bionic
+
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
+        gosu \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN groupadd -r builder && \
+    useradd -r -g builder -s /bin/bash -m builder
+
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
+        build-essential cmake \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
+        libopencv-dev libeigen3-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
+        libgl1-mesa-dev libglew-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update -y \
     && apt-get install -y --no-install-recommends \
