--- a/Dockerfile.deps
+++ b/Dockerfile.deps
@@ -2,6 +2,15 @@ FROM ros:melodic-ros-core-bionic
 
 RUN apt-get update -y \
     && apt-get install -y --no-install-recommends \
+        gosu \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN groupadd -r builder && \
+    useradd -r -g builder -s /bin/bash -m builder
+
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
         build-essential cmake \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
